API Chat creation updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9092
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/coe_chat
-spring.datasource.username=webapi
-spring.datasource.password=webapi
+spring.datasource.username=coechat
+spring.datasource.password=coechat
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
